--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,15 @@
-asgiref
-crispy-bootstrap5
-dj-database-url
-Django
-django-crispy-forms
-django-email
-django-environ
-MouseInfo
-numpy
-opencv-contrib-python
-pillow
-psycopg2
-psycopg2-binary
-PyAutoGUI
-PyGetWindow
-PyMsgBox
-pyperclip
-PyRect
-PyScreeze
-pytweening
-sqlparse
-typing_extensions
-tzdata
+asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+dj-database-url==3.0.1
+Django==5.2.5
+django-allauth==65.10.0
+django-environ==0.12.0
+idna==3.10
+PyJWT==2.10.1
+python-slugify==8.0.4
+requests==2.32.4
+sqlparse==0.5.3
+text-unidecode==1.3
+tzdata==2025.2
+urllib3==2.5.0
